@@ -1,5 +1,10 @@
 2010-11-02  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/46149
+	* g++.dg/torture/pr46149.C: New testcase.
+
+2010-11-02  Richard Guenther  <rguenther@suse.de>
+
 	PR tree-optimization/46216
 	* gcc.dg/torture/pr46216.c: New testcase.
 
